# harness-code

./: .gitignore  AGENT_LOG.md  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  demo_mechanisms.py  pyproject.toml
.github/workflows/: test.yml
data/: guardrail_audit.jsonl
src/harness/: main.py
src/harness/cli/: __init__.py  init_cmds.py  key_cmds.py
src/harness/config/: defaults.yaml  settings.py
src/harness/core/: action.py  agent.py  context.py  llm.py  parser.py  result.py
src/harness/guardrail/: __init__.py  classifiers.py  default_rules.yaml  engine.py  hitl.py  rules.py
src/harness/memory/: manager.py
src/harness/tools/: __init__.py  file_ops.py  image_reader.py  registry.py  shell.py
src/harness/web/: __init__.py  conversations.py  server.py
src/harness/web/static/: index.html
src/harness/web/static/css/: app.css
src/harness/web/static/js/: app.js
tests/: test_agent_loop.py  test_cli.py  test_context_builder.py  test_guardrail_engine.py  test_hitl_pipeline.py  test_memory_manager.py  test_tool_registry.py
tests/fixture/: sample_action.py  sample_rules.yaml  stub_llm.py
