[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-code"
version = "0.1.0"
description = "A secure coding agent harness with guardrail engine"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "keyring>=24.0",
]

[project.scripts]
harness = "harness.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
